--- a/PersonalPage/index.html
+++ b/PersonalPage/index.html
@@ -5,12 +5,14 @@
     <title>Boris Siniak | Personal Page</title>
 </head>
 <body>
+    <header>
     <h1> Boris Siniak personal page</h1>
+    </header>
     <h2>About me</h2>
     <img src="myphoto.jpg" width="150px" alt="boris siniak photo">
     <p>Hello everyone! 👋<br>
     I'm a passionate graphic and web designer with a background in nonprofit organizations, businesses, design agencies, printing agencies and IT.<br> 
-    I bring a unique blend of creativity and technical expertise to every project.
+    I bring a unique blend of creativi git branch -d <branch> ty and technical expertise to every project.
     </p>
     <h2>My project</h2>
     <p>You can check out my projects <a href="portfolio.html">this page</a> </p>
