--- a/PersonalPage/index.html
+++ b/PersonalPage/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="personalpagecss.css">
     <title>Boris Siniak | Personal Page</title>
 </head>
 <body>
