--- a/PersonalPage/index.html
+++ b/PersonalPage/index.html
@@ -6,20 +6,39 @@
     <title>Boris Siniak | Personal Page</title>
 </head>
 <body>
+    <div class="myphoto">
+        <img src="myphoto.jpg" width="150px" alt="boris siniak photo">
+    </div>
     <header>
-    <h1> Boris Siniak personal page</h1>
+    <h1> Boris Siniak<br> 
+        <span class="h-main">Graphic and<br>
+            Web Designer</span></h1>
     </header>
-    <h2>About me</h2>
-    <img src="myphoto.jpg" width="150px" alt="boris siniak photo">
-    <p>Hello everyone! 👋<br>
-    I'm a passionate graphic and web designer with a background in nonprofit organizations, businesses, design agencies, printing agencies and IT.<br> 
-    I bring a unique blend of creativi git branch -d <branch> ty and technical expertise to every project.
-    </p>
-    <h2>My project</h2>
-    <p>You can check out my projects <a href="portfolio.html">this page</a> </p>
+
+    <div class="subheading">   
+        I'm a passionate graphic and web designer with a background in nonprofit organizations, businesses, design agencies, printing agencies and IT.<br> 
+    </div>
+   
+    <div class="divtwo">
+   <div class="box"> <h2>My project</h2>
+     <div class="iconblock"><img src="icon/portfolio.svg" class="icon" alt="portfolio icon"><a href="portfolio.html">Check out my projects</a></div>
+</div>
+<div class="box">
     <h2>My Social Media</h2>
-        <a href="https://www.linkedin.com/in/boris-siniak/">Linkedin</a>
-        <a href="https://www.instagram.com/siniakboris">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=1345192723">Facebook</a>
+    <div class = "iconblock"><a href="https://www.linkedin.com/in/boris-siniak/"><img src="icon/linkedin.svg" class="icon" alt="linkedin icon">Linkedin</a></div>
+        <div class = "iconblock"><a href="https://www.instagram.com/siniakboris"><img src="icon/instagram.svg" class="icon" alt="instagram icon">Instagram</a></div>
+
+        <div class = "iconblock"> <a href="https://www.facebook.com/profile.php?id=1345192723"><img src="icon/facebook.svg" class="icon" alt="facebook icon">Facebook</a></div>
+    </div>
+    <div class="box">
+    <h2>More about me</h2>
+    <div class = "iconblock"><a href="CV_Siniak_Boris_designer eng.pdf" target="_blank"><img src="icon/personal-profile.svg" class="icon" alt="facebook icon">Download my CV</a><br></div>
+    <div class = "iconblock"><a href="about.html"><img src="icon/about.svg" class="icon" alt="facebook icon">About me</a><br></div>
+</div>
+</div>
+<div class="divthree">
+<p class="quote">I bring a unique blend of creativity and technical expertise to every project</p>
+</div>
+<button class="mainbutton"><a class="linkbutton" href="mailto: siniakboris@gmail.com" >Let't work together!</a></button>
 </body>
 </html>
