--- a/PersonalPage/portfolio.html
+++ b/PersonalPage/portfolio.html
@@ -6,18 +6,43 @@
     <title>Boris Siniak | Portfolio</title>
 </head>
 <body>
-    <h1> Boris Siniak personal page</h1>
-    <h2>My works</h2>
-    <h3>Beatles Page</h3>
+    <h1>My works</h1>
+    <div class="portfolio-row">
+        <div class="portfolio-column">
+    <h2>Beatles Page</h2>
+    <a href="https://www.figma.com/proto/qUeTETt9uO2HsOftI7ywWF/Click-Start?page-id=0%3A1&node-id=10-18&viewport=688%2C988%2C0.09&t=SM071s3RLkdupdOm-1&scaling=min-zoom&content-scaling=fixed" target=”_blank”><img src="image/beatles image.png" alt="beatles cover" class="hover_image"></a>
     <p>One-page file about your favorite band</p>
     <a href="https://www.figma.com/proto/qUeTETt9uO2HsOftI7ywWF/Click-Start?page-id=0%3A1&node-id=10-18&viewport=688%2C988%2C0.09&t=SM071s3RLkdupdOm-1&scaling=min-zoom&content-scaling=fixed" target=”_blank”>Link to Figma</a>
-        <br>
-        <br>
-    <h3>Natural Tidy</h3>
+    </div>  
+         <div class="portfolio-column"> 
+    <h2>Natural Tidy</h2>
+    <a href="https://www.figma.com/proto/8kVIdsL7rsFWfMuNoUddDX/Naturally-Tidy?page-id=0%3A1&node-id=1-2&viewport=89%2C324%2C0.09&t=txYV3J5DXcyIFaIt-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=4%3A2" target=”_blank”><img src="image/natural.jpg" alt="natural cover" class="hover_image"></a>
     <p>Prototype for a cleaning company website</p>
     <a href="https://www.figma.com/proto/8kVIdsL7rsFWfMuNoUddDX/Naturally-Tidy?page-id=0%3A1&node-id=1-2&viewport=89%2C324%2C0.09&t=txYV3J5DXcyIFaIt-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=4%3A2" target=”_blank”>Link to Figma prototype</a>
+    </div>
     <br>
     <br>
-   <p><a href="index.html">Back to main page</a></p>
+    </div>
+    <div class="portfolio-row">
+        <div class="portfolio-column">
+    <h2>Beatles Page</h2>
+    <a href="https://www.figma.com/proto/qUeTETt9uO2HsOftI7ywWF/Click-Start?page-id=0%3A1&node-id=10-18&viewport=688%2C988%2C0.09&t=SM071s3RLkdupdOm-1&scaling=min-zoom&content-scaling=fixed" target=”_blank”><img src="image/beatles image.png" alt="beatles cover" class="hover_image"></a>
+    <p>One-page file about your favorite band</p>
+    <a href="https://www.figma.com/proto/qUeTETt9uO2HsOftI7ywWF/Click-Start?page-id=0%3A1&node-id=10-18&viewport=688%2C988%2C0.09&t=SM071s3RLkdupdOm-1&scaling=min-zoom&content-scaling=fixed" target=”_blank”>Link to Figma</a>
+    </div>  
+         <div class="portfolio-column"> 
+    <h2>Natural Tidy</h2>
+    <a href="https://www.figma.com/proto/8kVIdsL7rsFWfMuNoUddDX/Naturally-Tidy?page-id=0%3A1&node-id=1-2&viewport=89%2C324%2C0.09&t=txYV3J5DXcyIFaIt-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=4%3A2" target=”_blank”><img src="image/natural.jpg" alt="natural cover" class="hover_image"></a>
+    <p>Prototype for a cleaning company website</p>
+    <a href="https://www.figma.com/proto/8kVIdsL7rsFWfMuNoUddDX/Naturally-Tidy?page-id=0%3A1&node-id=1-2&viewport=89%2C324%2C0.09&t=txYV3J5DXcyIFaIt-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=4%3A2" target=”_blank”>Link to Figma prototype</a>
+    </div>
+    <br>
+    <br>
+    </div>
+<br>
+   <div class="backtomain"><a href="index.html">Back to main page</a></div>
+   <button class="portfoliobutton"><a class="linkbutton" href="mailto: siniakboris@gmail.com" >Let't work together!</a></button>
+   <br>
+   <br>
 </body>
 </html>
